Update to 3.8. Replace account_bank_ar with bank_ar module.

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -2,7 +2,7 @@
 version=3.4.1
 depends:
     account_voucher_ar
-    account_bank_ar
+    bank_ar
 xml:
     account_check_ar.xml
     account_voucher_ar.xml
