Adds integration with Statement

--- a/tryton.cfg
+++ b/tryton.cfg
@@ -3,6 +3,8 @@ version=6.3.0
 depends:
     bank_ar
     account_voucher_ar
+extras_depend:
+    account_statement
 xml:
     account_check_ar.xml
     account_voucher_ar.xml
